syntax = "proto3";

option go_package="github.com/IBM/cloudland/web/sca/selfs";

package com.github.ibm.cloudland.sca.selfs;

service SelfAdmin {
  rpc Upgrade(UpgradeRequest) returns(UpgradeReply);
  rpc Runtime(RuntimeRequest) returns(RuntimeReply);
  rpc Set(SetRequest) returns(SetReply);
}

message UpgradeRequest {
  string version = 1;
}

message UpgradeReply{}

message RuntimeRequest{}

message RuntimeReply{
  string version = 1;
  string executable = 2;
  string pid = 3;
  string pwd = 6;
  repeated string args = 4;
  repeated string environ = 5;
  repeated string netrc = 7;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetReply {
}
